[gd_scene load_steps=14 format=3 uid="uid://dhk1x0kr7ux3a"]

[ext_resource type="Script" path="res://src/widgets/menu_form.gd" id="1_8oei1"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="1_wgyck"]
[ext_resource type="Texture2D" uid="uid://cf4urcy4ejis2" path="res://assets/textures/widgets/others/yellow_button00.png" id="2_3jmcb"]
[ext_resource type="Texture2D" uid="uid://bq8acldburxay" path="res://assets/textures/widgets/letters/letterT.png" id="3_6isdi"]
[ext_resource type="Texture2D" uid="uid://lfc2uf3ik7v" path="res://assets/textures/widgets/others/yellow_button13.png" id="3_cywuh"]
[ext_resource type="Texture2D" uid="uid://duxt4hwxkb58" path="res://assets/textures/widgets/letters/letterA.png" id="4_nogju"]
[ext_resource type="Texture2D" uid="uid://deqmv14ruqqby" path="res://assets/textures/widgets/letters/letterP.png" id="5_73en1"]
[ext_resource type="Texture2D" uid="uid://bllad25nq28qn" path="res://assets/textures/widgets/others/grey_button00.png" id="5_uwhjh"]
[ext_resource type="Texture2D" uid="uid://yo35qsrdlu7v" path="res://assets/textures/widgets/letters/letterY.png" id="6_wmmhq"]
[ext_resource type="Texture2D" uid="uid://btwl1xoqnuixv" path="res://assets/textures/widgets/letters/letterL.png" id="7_ytuys"]
[ext_resource type="Texture2D" uid="uid://ntkwuab7qwvb" path="res://assets/textures/widgets/letters/letterN.png" id="8_m6hfh"]
[ext_resource type="Texture2D" uid="uid://csf5xxgu6t0fv" path="res://assets/textures/widgets/letters/letterE.png" id="9_ryv4s"]

[sub_resource type="LabelSettings" id="LabelSettings_y10gp"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="MenuForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8oei1")

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
texture = ExtResource("1_wgyck")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_6isdi")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
modulate = Color(0.305882, 1, 0.247059, 1)
layout_mode = 2
texture = ExtResource("4_nogju")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_73en1")
expand_mode = 3

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_73en1")
expand_mode = 3

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
modulate = Color(0.988235, 0, 0, 1)
layout_mode = 2
texture = ExtResource("6_wmmhq")
expand_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_73en1")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
modulate = Color(1, 0.27451, 1, 1)
layout_mode = 2
texture = ExtResource("7_ytuys")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_nogju")
expand_mode = 3

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_m6hfh")
expand_mode = 3

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_ryv4s")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="btn_new_game" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
texture_normal = ExtResource("2_3jmcb")
texture_disabled = ExtResource("3_cywuh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_new_game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "NewGame"
label_settings = SubResource("LabelSettings_y10gp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_settings" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
texture_normal = ExtResource("2_3jmcb")
texture_disabled = ExtResource("5_uwhjh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_y10gp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_rank" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
texture_normal = ExtResource("2_3jmcb")
texture_disabled = ExtResource("5_uwhjh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_rank"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Rank"
label_settings = SubResource("LabelSettings_y10gp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_quit" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
texture_normal = ExtResource("2_3jmcb")
texture_disabled = ExtResource("3_cywuh")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "QuitGame"
label_settings = SubResource("LabelSettings_y10gp")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_new_game" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_rank" to="." method="_on_btn_rank_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
